--- a/VanirPC.CSharp.csproj
+++ b/VanirPC.CSharp.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{281B5AE7-EFC5-9507-0F83-1612D79636C5}</ProjectGuid>
+    <ProjectGuid>{F97C753D-DDA9-3AE0-BB1C-BAB3721A96CA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AssemblyName>Assembly-CSharp</AssemblyName>
     <FileAlignment>512</FileAlignment>
@@ -13,13 +13,11 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile>
-    </CompilerResponseFile>
+    <CompilerResponseFile></CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>5.2.3f1</UnityVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -43,10 +41,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
-    <Reference Include="Photon3Unity3D, Version=3.2.0.1, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>Assets\Photon\Photon3Unity3D.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.XML" />
     <Reference Include="System.Core" />
@@ -72,6 +66,9 @@
     <Reference Include="UnityEditor.iOS.Extensions.Xcode">
       <HintPath>Library\UnityAssemblies\UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
     </Reference>
+    <Reference Include="Photon3Unity3D">
+      <HintPath>Assets\Photon\Photon3Unity3D.dll</HintPath>
+    </Reference>
     <Reference Include="VanirProtocol">
       <HintPath>Assets\Photon\VanirProtocol.dll</HintPath>
     </Reference>
@@ -79,10 +76,8 @@
   <ItemGroup>
     <Compile Include="Assets\Controller\Network\ModuleNetwork\AccountManager\AccountManager.cs" />
     <Compile Include="Assets\Controller\Network\Network.cs" />
-    <Compile Include="Assets\Scenes\Scene_0_Login\GUILogin.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Assets\Controller\Network\NewFolder1\" />
+    <Compile Include="Assets\Scenes\Scene_0_Login\script\GUILogin.cs" />
+    <Compile Include="Assets\Scenes\Scene_1_Main\script\GUIMain.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
